--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username = root
 spring.datasource.password =
 spring.jpa.database-platform = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.main.allow-bean-definition-overriding=true
