--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-
-=======
 spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
@@ -9,4 +6,8 @@ spring.jpa.database-platform = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.main.allow-bean-definition-overriding=true
->>>>>>> 687563e70c688a97f1ef9bf78a8b47fba29fc733
+spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 10MB
+
