--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>GenuineGames</name>
 	<description>Proyecto fin grado</description>
 	<properties>
-		<java.version>11</java.version>
+<!-- 		<java.version>11</java.version> -->
 	</properties>
 	<dependencies>
 		<dependency>
