--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>GenuineGames</name>
 	<description>Proyecto fin grado</description>
 	<properties>
-<!-- 		<java.version>11</java.version> -->
+		<!-- <java.version>11</java.version> -->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -64,6 +64,11 @@
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
