--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/test
+spring.datasource.url = eu-cdbr-west-01.cleardb.com
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password =
@@ -10,4 +10,6 @@ spring.servlet.multipart.enabled=true
 
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size = 10MB
+
+
 
