--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = eu-cdbr-west-01.cleardb.com
+spring.datasource.url = mysql://b9a35cf1e1c45e:aa75f970@eu-cdbr-west-01.cleardb.com/heroku_a61e3df18c6e214?reconnect=true
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password =
