--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = mysql://b9a35cf1e1c45e:aa75f970@eu-cdbr-west-01.cleardb.com/heroku_a61e3df18c6e214?reconnect=true
+spring.datasource.url = ${DATABASE_URL}
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.username = b9a35cf1e1c45e
-spring.datasource.password = aa75f970
+spring.datasource.username = ${DATABASE_USERNAME}
+spring.datasource.password = ${DATABASE_PASS}
 spring.jpa.database-platform = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
