--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = ${DATABASE_URL}
+spring.datasource.url = ${CLEARDB_DATABASE_URL}
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username = ${DATABASE_USERNAME}
-spring.datasource.password = ${DATABASE_PASS}
+spring.datasource.password = ${DATABASE_PASSWORD}
 spring.jpa.database-platform = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
