--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/test
+spring.datasource.url = ${CLEARDB_DATABASE_URL}
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.username = ${DATABASE_USERNAME}
+spring.datasource.password = ${DATABASE_PASSWORD}
 spring.jpa.database-platform = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
@@ -10,6 +10,7 @@ spring.servlet.multipart.enabled=true
 
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size = 10MB
+
 
 
 
