--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.url = ${CLEARDB_DATABASE_URL}
+spring.datasource.url = jdbc:mysql://localhost:3306/test
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.username = ${DATABASE_USERNAME}
-spring.datasource.password = ${DATABASE_PASSWORD}
+spring.datasource.username = root
+spring.datasource.password =
 spring.jpa.database-platform = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.main.allow-bean-definition-overriding=true
 spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 10MB
